<resources>
    <string name="app_name">Covid Map</string>
    <string name="title_activity_maps">Covid Map</string>
    <string name="nome_do_usuario">Nome do usuário</string>
    <string name="historico">Histórico</string>
    <string name="map_id">22e2e7206aecac52</string>
    <string name="orienta_es_sobre_o_covid_19_coronav_rus">Orientações sobre o COVID-19 Coronavírus</string>
    <string name="como_est_a_sua_sa_de_neste_momento">Como está a sua saúde neste momento?</string>
    <string name="bem">Bem</string>
    <string name="mal">Mal</string>
    <string name="confirmados">Confirmados</string>
    <string name="recuperados">Recuperados</string>
    <string name="mortes">Mortes</string>
    <string name="ativos">Ativos</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="contatonoultimos14dias">Você manteve contato próximo com uma pessoa positiva para COVID-19 nos últimos 14 dias?</string>
    <string name="sintomas_que_se_desenvolveram">Indique sintomas que se desenvolveram nas últimas 24 horas e que não são de uma condição crônica ou conhecida</string>
    <string name="febre">Febre</string>
    <string name="tosse">Tosse</string>
    <string name="avancar">Avançar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dor_de_garganta">Dor de garganta</string>
    <string name="dores_no_corpo">Dores no corpo</string>
    <string name="sem_sintomas">Sem sintomas</string>
    <string name="finalizar">Finalizar</string>
    <string name="fonte">Fonte:</string>
    <string name="numero_wpp">(61) 9938-0031</string>
    <string name="minist_rio_da_sa_de_responde_coronav_rus">Ministério da Saúde Responde: Coronavírus</string>
    <string name="disque_sa_de">Disque Saúde</string>
    <string name="numero_disque_saude">136</string>
    <string name="http_coronavirus_ministerio_saude">http://coronavirus.saude.gov.br/</string>
    <string name="n_o_compartilhe_objetos_de_uso_pessoal">Não compartilhe objetos de uso pessoal.</string>
    <string name="evite_locais_com_aglomera_o_de_pessoas">Evite locais com aglomeração de pessoas.</string>
    <string name="ao_tossir_ou_espirrar_cubra_o_nariz_e_a_boca_com_um_len_o_de_papel_ou_use_o_antebra_o_nunca_com_as_m_os">Ao tossir ou espirrar, cubra o nariz e a boca com um lenço de papel ou use o antebraço (nunca com as mãos).</string>
    <string name="higienize_as_m_os_frequentemente_com_gua_e_sab_o_ou_lcool_gel_70">Higienize as mãos frequentemente com água e sabão, ou álcool gel 70%.</string>
    <string name="use_m_scara_facial_assim_voc_ir_evitar_a_transmiss_o_de_outras_pessoas_durante_o_trajeto">Use máscara facial. Assim você irá evitar a transmissão de outras pessoas, durante o trajeto.</string>
    <string name="basta_clicar_no_bot_o_abaixo_para_ligar_diretamente_ou_para_abrir_o_whatsapp_n_ncaso_seja_necess_rio_ir_at_uma_unidade_de_atendimento_proteja_se_com">Basta clicar no botão abaixo para ligar diretamente ou para abrir o Whatsapp.\n\nCaso seja necessário ir até uma unidade de atendimento, proteja-se com:</string>
    <string name="antes_de_procurar_uma_unidade_de_atendimento_hospitalar_ligue_para_a_central_de_atendimento_do_disque_sa_de_ou_entre_no_whatsapp_do_minist_rio_da_sa_de_onde_poder_tirar_d_vidas_sobre_a_doen_a">Antes de procurar uma unidade de atendimento hospitalar ligue para a central de atendimento do Disque Saúde ou entre no WhatsApp do Ministério da Saúde, onde poderá tirar dúvidas sobre a doença.</string>
    <string name="baseado_no_perfil_informado_em_suas_respostas_prov_vel_que_o_seu_caso_se_enquadre_como_caso_suspeito_ou_prov_vel_da_doen_a_coronav_rus_2019_covid_19_essa_avalia_o_tem_car_ter_informativo_e_n_o_considerada_como_um_diagn_stico">Baseado no perfil informado em suas respostas, é provável que o seu caso se enquadre como caso suspeito ou provável da doença Coronavírus 2019 (COVID-19). Essa avaliação tem caráter informativo e não é considerada como um diagnóstico.</string>
    <string name="voltar">Voltar</string>
    <string name="avan_ar">Avançar</string>
    <string name="text_terms">Esta política de Termos de Uso é válida a partir de Nov 2021.
TERMOS DE USO — COVID MAP
COVID MAP, pessoa jurídica de direito privado descreve, através deste documento, as regras de uso do aplicativo operado pelo proprietário.
Ao navegar neste aplicativo, consideramos que você está de acordo com os Termos de Uso abaixo.
Caso você não esteja de acordo com as condições deste contrato, pedimos que não faça mais uso deste website, muito menos cadastre-se ou envie os seus dados pessoais.
Se modificarmos nossos Termos de Uso, publicaremos o novo texto neste aplicativo, com a data de revisão atualizada. Podemos alterar este documento a qualquer momento. Caso haja alteração significativa nos termos deste contrato, podemos informá-lo por meio das informações de contato que tivermos em nosso banco de dados ou por meio de notificações.
A utilização deste aplicativo após as alterações significa que você aceitou os Termos de Uso revisados. Caso, após a leitura da versão revisada, você não esteja de acordo com seus termos, favor encerrar o seu acesso.
•	Seção 1 - Usuário
A utilização deste aplicativo atribui de forma automática a condição de Usuário e implica a plena aceitação de todas as diretrizes e condições incluídas nestes Termos.
•	Seção 2 - Adesão em conjunto com a Política de Privacidade
A utilização deste aplicativo acarreta a adesão aos presentes Termos de Uso e a versão mais atualizada da Política de Privacidade de COVID MAP.
•	Seção 3 - Condições de acesso
Em geral, o acesso ao aplicativo COVID MAP possui caráter gratuito e não exige prévia inscrição ou registro.
Contudo, para usufruir de algumas funcionalidades, o usuário poderá precisar efetuar um cadastro, utilizando dados da sua conta do google para acesso.
Seção 4 - Propriedade Intelectual
Todos os elementos de COVID MAP são de propriedade intelectual da mesma ou de seus licenciados. Estes Termos ou a utilização do aplicativo não concede a você qualquer licença ou direito de uso dos direitos de propriedade intelectual da COVID MAP ou de terceiros.
•	Seção 5 - Links para sites de terceiros
Este aplicativo poderá, de tempos a tempos, conter links de hipertexto que redirecionará você para sites. Se você clicar em um desses links para qualquer um desses sites, lembre-se que cada site possui as suas próprias práticas de privacidade e que não somos responsáveis por essas políticas. Consulte as referidas políticas antes de enviar quaisquer Dados Pessoais para esses sites.
Não nos responsabilizamos pelas políticas e práticas de coleta, uso e divulgação (incluindo práticas de proteção de dados) de outras organizações, tais como Facebook, Apple, Google, Microsoft, ou de qualquer outro desenvolvedor de software ou provedor de aplicativo, loja de mídia social, sistema operacional, prestador de serviços de internet sem fio ou fabricante de dispositivos, incluindo todos os Dados Pessoais que divulgar para outras organizações por meio dos aplicativos, relacionadas a tais aplicativos, ou publicadas em nossas páginas em mídias sociais. Nós recomendamos que você se informe sobre a política de privacidade e termos de uso de cada site visitado ou de cada prestador de serviço utilizado.
•	Seção 7 - Prazos e alterações
O funcionamento deste aplicativo se dá por prazo indeterminado.
O aplicativo no todo ou em cada uma das suas seções, pode ser encerrado, suspenso ou interrompido unilateralmente por COVID MAP, a qualquer momento e sem necessidade de prévio aviso.
•	Seção 8 - Dados pessoais
Durante a utilização deste aplicativo, certos dados pessoais serão coletados e tratados por COVID MAP. As regras relacionadas ao tratamento de dados pessoais de COVID MAP estão estipuladas na Política de Privacidade.
•	Seção 9 - Contato
Caso você tenha qualquer dúvida sobre os Termos de Uso, por favor, entre em contato pelo e-mail carvalhosamarlonn@gmail.com.
</string>
    <string name="text_politic">Política Privacidade
A sua privacidade é importante para nós. É política do COVID MAP respeitar a sua privacidade em relação a qualquer informação sua que possamos coletar no site COVID MAP, e outros sites que possuímos e operamos.
Solicitamos informações pessoais apenas quando realmente precisamos delas para lhe fornecer um serviço. Fazemo-lo por meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que estamos coletando e como será usado.
Apenas retemos as informações coletadas pelo tempo necessário para fornecer o serviço solicitado. Quando armazenamos dados, protegemos dentro de meios comercialmente aceitáveis para evitar perdas e roubos, bem como acesso, divulgação, cópia, uso ou modificação não autorizados.
Não compartilhamos informações de identificação pessoal publicamente ou com terceiros, exceto quando exigido por lei.
O nosso site pode ter links para sites externos que não são operados por nós. Esteja ciente de que não temos controle sobre o conteúdo e práticas desses sites e não podemos aceitar responsabilidade por suas respectivas.
Você é livre para recusar a nossa solicitação de informações pessoais, entendendo que talvez não possamos fornecer alguns dos serviços desejados.
O uso continuado de nosso site será considerado como aceitação de nossas práticas em torno de privacidade e informações pessoais. Se você tiver alguma dúvida sobre como lidamos com dados do usuário e informações pessoais, entre em contacto connosco.
Compromisso do Usuário
O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o COVID MAP oferece no site e com caráter enunciativo, mas não limitativo:
•	A) Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública;
•	B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, jogos de hoje ou azar, qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou contra os direitos humanos;
•	C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do COVID MAP, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos anteriormente mencionados.
Mais informações
Esperemos que esteja esclarecido e, como mencionado anteriormente, se houver algo que você não tem certeza se precisa ou não, geralmente é mais seguro deixar os cookies ativados, caso interaja com um dos recursos que você usa em nosso site.
Esta política é efetiva a partir de Novembro/2021.
</string>
</resources>