<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:layout_constraintDimensionRatio="16:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orienta_es_sobre_o_covid_19_coronav_rus"
                android:textColor="#3A833D"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:layout_constraintDimensionRatio="16:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/como_est_a_sua_sa_de_neste_momento"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_saude_bem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/gray"
        app:cardCornerRadius="8dp"
        android:layout_margin="16dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintEnd_toStartOf="@id/cv_saude_mal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_baseline_mood_24"
                app:layout_constraintDimensionRatio="0.6"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@id/tv_transferir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bem"
                android:textColor="@color/green"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_transferir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_transferir"
                app:layout_constraintTop_toTopOf="@+id/iv_transferir" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_saude_mal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/gray"
        app:cardCornerRadius="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/cv_saude_bem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_saude_bem"
        app:layout_constraintTop_toTopOf="@id/cv_saude_bem">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recarga"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:src="@drawable/ic_baseline_mood_bad_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="0.6"
                app:layout_constraintEnd_toStartOf="@id/tv_recarga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mal"
                android:textColor="@color/red"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_recarga"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_recarga"
                app:layout_constraintTop_toTopOf="@+id/iv_recarga" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>