<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_last_symptom_covid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_cv">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/sintomas_que_se_desenvolveram"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_symptom_febre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/transparent_purple"
        app:cardCornerRadius="8dp"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintEnd_toStartOf="@id/button_symptom_tosse"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_last_symptom_covid">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_symptom_febre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/febre"
                android:textColor="@color/primary_purple"
                android:textSize="19sp"
                android:textStyle=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_symptom_tosse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/transparent_purple"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/button_symptom_febre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_symptom_febre"
        app:layout_constraintTop_toTopOf="@id/button_symptom_febre">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_symptom_tosse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tosse"
                android:textColor="@color/primary_purple"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_symptom_arrepios_tremores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/transparent_purple"
        app:cardCornerRadius="8dp"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintEnd_toStartOf="@id/button_symptom_falta_ar"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_symptom_febre">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_symptom_arrepios_tremores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arrepios ou\nTremores"
                android:textAlignment="center"
                android:textColor="@color/primary_purple"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_symptom_falta_ar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/transparent_purple"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/button_symptom_arrepios_tremores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_symptom_arrepios_tremores"
        app:layout_constraintTop_toTopOf="@id/button_symptom_arrepios_tremores">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_symptom_falta_ar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Falta de ar"
                android:textColor="@color/primary_purple"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_symptom_paladar_ofato"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/transparent_purple"
        app:cardCornerRadius="8dp"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintEnd_toStartOf="@id/button_negative_symptom_second_session"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_symptom_arrepios_tremores">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_symptom_paladar_ofato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Falta de paladar\nou ofato"
                android:textAlignment="center"
                android:textColor="@color/primary_purple"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_negative_symptom_second_session"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/transparent_purple"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/button_symptom_paladar_ofato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_symptom_paladar_ofato"
        app:layout_constraintTop_toTopOf="@id/button_symptom_paladar_ofato">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_negative_symptom_second_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sem sintomas"
                android:textColor="@color/primary_purple"
                android:textSize="19sp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_second_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:backgroundTint="@color/light_purple"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3.5"
        app:layout_constraintEnd_toStartOf="@id/cv_second_next"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_symptom_paladar_ofato"
        app:layout_constraintVertical_bias="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_cv">

            <TextView
                android:id="@+id/tv_second_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:textAlignment="center"
                android:textColor="@color/primary_purple"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_second_next"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/light_purple"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/cv_second_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_second_back"
        app:layout_constraintTop_toTopOf="@id/cv_second_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_second_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avancar"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>